[gd_scene load_steps=6 format=3 uid="uid://bs7ixulkrq5ho"]

[ext_resource type="Script" path="res://GameFiles/Game Objects/Fountain/darkness_tile.gd" id="1_6068e"]
[ext_resource type="Texture2D" uid="uid://c56u1n242i5r5" path="res://GameFiles/Resources/Tilesets/DarknessTiles.png" id="1_oqdpt"]
[ext_resource type="PackedScene" uid="uid://ydmxubnmay2o" path="res://GameFiles/Game Objects/Components/hurtbox_component.tscn" id="2_5vul1"]
[ext_resource type="PackedScene" uid="uid://b25iseq2d0dnd" path="res://GameFiles/Game Objects/Components/health_component.tscn" id="4_7errf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rphk0"]
size = Vector2(32, 32)

[node name="DarknessTile" type="Node2D"]
position = Vector2(8, 8)
scale = Vector2(0.5, 0.5)
script = ExtResource("1_6068e")

[node name="Sprite2D" type="Sprite2D" parent="."]
show_behind_parent = true
texture = ExtResource("1_oqdpt")
hframes = 4
frame = 3

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("2_5vul1")]
collision_layer = 2
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("RectangleShape2D_rphk0")

[node name="HealthComponent" parent="." instance=ExtResource("4_7errf")]

[connection signal="hurt" from="HurtboxComponent" to="." method="_on_hurtbox_component_hurt"]
[connection signal="health_depleted" from="HealthComponent" to="." method="_on_health_component_health_depleted"]
[connection signal="health_lost" from="HealthComponent" to="." method="_on_health_component_health_lost"]
